add prose componet for highlight

--- a/content/articles/1.test.md
+++ b/content/articles/1.test.md
@@ -5,3 +5,52 @@ description: 'meta description of the page'
 ---
 
 # This is a test
+
+::button-link{icon="simple-icons:stackblitz" href="https://stackblitz.com/edit/nuxt-content-wind?file=content%2F1.index.md" blank}
+Play online on Stackblitz
+::
+
+```vue
+<template>
+  <div>
+    <h1>Test</h1>
+  </div>
+</template>
+```
+
+```javascript
+export default () => {
+  console.log('Code block')
+}
+```
+
+
+:terminal{content="nuxi build"}
+
+```bash
+npx nuxi init -t themes/content-wind my-website
+```
+
+
+```javascript[file.js]{4-6,7} meta-info=val
+export default () => {
+  console.log('Code block')
+}
+```
+
+::callout
+#summary
+This is a callout! Click me to open.
+#content
+This is the content of the callout.
+::
+
+
+::code-group
+  ```bash [Yarn]
+  yarn add docus
+  ```
+  ```bash [NPM]
+  npm install docus
+  ```
+::
